-fixed bug preventDefault; -aligned icons forms

--- a/src/sass/objects/_objects.scss
+++ b/src/sass/objects/_objects.scss
@@ -111,7 +111,8 @@
 		font-size: 22px;
 		color: #C4CACE;
 		position: absolute;
-		top: 18px;
+		top: 50%;
+		transform: translate(0,-50%);
 		left: 15px;
 	}
 	&__input{
